--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ body {
 }
 
 .prev-page-link,
+.app-link,
 .next-page-link {
     /* Combined styles for both links (These are the defaults that apply to all screen sizes) */
     color: white;
