--- a/style.css
+++ b/style.css
@@ -125,13 +125,13 @@ body {
     display: inline-block;
 }
 .app-link {
-    color: white;
+    color: black;
     background-color: red;
-    padding: 10px 15px;
+    padding: 8px 15px;
     text-decoration: none;
     border-radius: 5px;
     font-size: 16px;
-    border: 1px solid black;
+    border: 2px solid black;
     display: inline-block;
 }
 
