--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     justify-content: center; /* Centers children horizontally (still needed) */
     
     /* New Viewport Background Color */
-    background-color: #EEEEEE;
+    background-color: black;
     
     /* Other body properties maintained */
     min-height: 100vh;
